docs/5.x/generated/Namespaces.md
Namespaces
==========

This is a complete list of available namespaces:

- [``]()
- [`Piwik`](Piwik)
- [`Piwik\API`](Piwik/API)
- [`Piwik\Archive`](Piwik/Archive)
- [`Piwik\ArchiveProcessor`](Piwik/ArchiveProcessor)
- [`Piwik\Auth`](Piwik/Auth)
- [`Piwik\Category`](Piwik/Category)
- [`Piwik\Columns`](Piwik/Columns)
- [`Piwik\Columns\Join`](Piwik/Columns/Join)
- [`Piwik\DataAccess`](Piwik/DataAccess)
- [`Piwik\DataTable`](Piwik/DataTable)
- [`Piwik\DataTable\Filter`](Piwik/DataTable/Filter)
- [`Piwik\Intl`](Piwik/Intl)
- [`Piwik\Intl\Data`](Piwik/Intl/Data)
- [`Piwik\Intl\Data\Provider`](Piwik/Intl/Data/Provider)
- [`Piwik\Menu`](Piwik/Menu)
- [`Piwik\Metrics`](Piwik/Metrics)
- [`Piwik\Metrics\Formatter`](Piwik/Metrics/Formatter)
- [`Piwik\Notification`](Piwik/Notification)
- [`Piwik\Period`](Piwik/Period)
- [`Piwik\Plugin`](Piwik/Plugin)
- [`Piwik\Plugin\Dimension`](Piwik/Plugin/Dimension)
- [`Piwik\Plugins`](Piwik/Plugins)
- [`Piwik\Plugins\AIAgents`](Piwik/Plugins/AIAgents)
- [`Piwik\Plugins\AIAgents\Columns`](Piwik/Plugins/AIAgents/Columns)
- [`Piwik\Plugins\AIAgents\Columns\Metrics`](Piwik/Plugins/AIAgents/Columns/Metrics)
- [`Piwik\Plugins\Actions`](Piwik/Plugins/Actions)
- [`Piwik\Plugins\Actions\Columns`](Piwik/Plugins/Actions/Columns)
- [`Piwik\Plugins\Actions\Columns\Metrics`](Piwik/Plugins/Actions/Columns/Metrics)
- [`Piwik\Plugins\Bandwidth`](Piwik/Plugins/Bandwidth)
- [`Piwik\Plugins\Bandwidth\Columns`](Piwik/Plugins/Bandwidth/Columns)
- [`Piwik\Plugins\Bandwidth\Columns\Metrics`](Piwik/Plugins/Bandwidth/Columns/Metrics)
- [`Piwik\Plugins\BotTracking`](Piwik/Plugins/BotTracking)
- [`Piwik\Plugins\BotTracking\Columns`](Piwik/Plugins/BotTracking/Columns)
- [`Piwik\Plugins\BotTracking\Columns\Metrics`](Piwik/Plugins/BotTracking/Columns/Metrics)
- [`Piwik\Plugins\Contents`](Piwik/Plugins/Contents)
- [`Piwik\Plugins\Contents\Columns`](Piwik/Plugins/Contents/Columns)
- [`Piwik\Plugins\Contents\Columns\Metrics`](Piwik/Plugins/Contents/Columns/Metrics)
- [`Piwik\Plugins\CoreHome`](Piwik/Plugins/CoreHome)
- [`Piwik\Plugins\CoreHome\Columns`](Piwik/Plugins/CoreHome/Columns)
- [`Piwik\Plugins\CoreHome\Columns\Metrics`](Piwik/Plugins/CoreHome/Columns/Metrics)
- [`Piwik\Plugins\CoreHome\SystemSummary`](Piwik/Plugins/CoreHome/SystemSummary)
- [`Piwik\Plugins\CoreVisualizations`](Piwik/Plugins/CoreVisualizations)
- [`Piwik\Plugins\CoreVisualizations\Metrics`](Piwik/Plugins/CoreVisualizations/Metrics)
- [`Piwik\Plugins\CoreVisualizations\Metrics\Formatter`](Piwik/Plugins/CoreVisualizations/Metrics/Formatter)
- [`Piwik\Plugins\CoreVisualizations\Visualizations`](Piwik/Plugins/CoreVisualizations/Visualizations)
- [`Piwik\Plugins\CoreVisualizations\Visualizations\Cloud`](Piwik/Plugins/CoreVisualizations/Visualizations/Cloud)
- [`Piwik\Plugins\CoreVisualizations\Visualizations\Graph`](Piwik/Plugins/CoreVisualizations/Visualizations/Graph)
- [`Piwik\Plugins\CoreVisualizations\Visualizations\HtmlTable`](Piwik/Plugins/CoreVisualizations/Visualizations/HtmlTable)
- [`Piwik\Plugins\CoreVisualizations\Visualizations\JqplotGraph`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph)
- [`Piwik\Plugins\CoreVisualizations\Visualizations\JqplotGraph\Evolution`](Piwik/Plugins/CoreVisualizations/Visualizations/JqplotGraph/Evolution)
- [`Piwik\Plugins\CoreVisualizations\Visualizations\Sparklines`](Piwik/Plugins/CoreVisualizations/Visualizations/Sparklines)
- [`Piwik\Plugins\CustomDimensions`](Piwik/Plugins/CustomDimensions)
- [`Piwik\Plugins\CustomDimensions\Columns`](Piwik/Plugins/CustomDimensions/Columns)
- [`Piwik\Plugins\CustomDimensions\Columns\Metrics`](Piwik/Plugins/CustomDimensions/Columns/Metrics)
- [`Piwik\Plugins\CustomDimensions\Dimension`](Piwik/Plugins/CustomDimensions/Dimension)
- [`Piwik\Plugins\CustomJsTracker`](Piwik/Plugins/CustomJsTracker)
- [`Piwik\Plugins\DevicePlugins`](Piwik/Plugins/DevicePlugins)
- [`Piwik\Plugins\Diagnostics`](Piwik/Plugins/Diagnostics)
- [`Piwik\Plugins\Diagnostics\Diagnostic`](Piwik/Plugins/Diagnostics/Diagnostic)
- [`Piwik\Plugins\Events`](Piwik/Plugins/Events)
- [`Piwik\Plugins\Events\Columns`](Piwik/Plugins/Events/Columns)
- [`Piwik\Plugins\Events\Columns\Metrics`](Piwik/Plugins/Events/Columns/Metrics)
- [`Piwik\Plugins\Goals`](Piwik/Plugins/Goals)
- [`Piwik\Plugins\Goals\Columns`](Piwik/Plugins/Goals/Columns)
- [`Piwik\Plugins\Goals\Columns\Metrics`](Piwik/Plugins/Goals/Columns/Metrics)
- [`Piwik\Plugins\Goals\Columns\Metrics\GoalSpecific`](Piwik/Plugins/Goals/Columns/Metrics/GoalSpecific)
- [`Piwik\Plugins\Live`](Piwik/Plugins/Live)
- [`Piwik\Plugins\Live\ProfileSummary`](Piwik/Plugins/Live/ProfileSummary)
- [`Piwik\Plugins\Live\Visualizations`](Piwik/Plugins/Live/Visualizations)
- [`Piwik\Plugins\Live\Visualizations\VisitorLog`](Piwik/Plugins/Live/Visualizations/VisitorLog)
- [`Piwik\Plugins\MobileMessaging`](Piwik/Plugins/MobileMessaging)
- [`Piwik\Plugins\MultiSites`](Piwik/Plugins/MultiSites)
- [`Piwik\Plugins\MultiSites\Columns`](Piwik/Plugins/MultiSites/Columns)
- [`Piwik\Plugins\MultiSites\Columns\Metrics`](Piwik/Plugins/MultiSites/Columns/Metrics)
- [`Piwik\Plugins\PagePerformance`](Piwik/Plugins/PagePerformance)
- [`Piwik\Plugins\PagePerformance\Columns`](Piwik/Plugins/PagePerformance/Columns)
- [`Piwik\Plugins\PagePerformance\Columns\Metrics`](Piwik/Plugins/PagePerformance/Columns/Metrics)
- [`Piwik\Plugins\Referrers`](Piwik/Plugins/Referrers)
- [`Piwik\Plugins\Referrers\Columns`](Piwik/Plugins/Referrers/Columns)
- [`Piwik\Plugins\Referrers\Columns\Metrics`](Piwik/Plugins/Referrers/Columns/Metrics)
- [`Piwik\Plugins\TagManager`](Piwik/Plugins/TagManager)
- [`Piwik\Plugins\TagManager\Template`](Piwik/Plugins/TagManager/Template)
- [`Piwik\Plugins\TagManager\Template\Tag`](Piwik/Plugins/TagManager/Template/Tag)
- [`Piwik\Plugins\TagManager\Template\Trigger`](Piwik/Plugins/TagManager/Template/Trigger)
- [`Piwik\Plugins\TagManager\Template\Variable`](Piwik/Plugins/TagManager/Template/Variable)
- [`Piwik\Plugins\Tour`](Piwik/Plugins/Tour)
- [`Piwik\Plugins\Tour\Engagement`](Piwik/Plugins/Tour/Engagement)
- [`Piwik\Plugins\TreemapVisualization`](Piwik/Plugins/TreemapVisualization)
- [`Piwik\Plugins\UsersManager`](Piwik/Plugins/UsersManager)
- [`Piwik\Plugins\VisitFrequency`](Piwik/Plugins/VisitFrequency)
- [`Piwik\Plugins\VisitFrequency\Columns`](Piwik/Plugins/VisitFrequency/Columns)
- [`Piwik\Plugins\VisitFrequency\Columns\Metrics`](Piwik/Plugins/VisitFrequency/Columns/Metrics)
- [`Piwik\Report`](Piwik/Report)
- [`Piwik\Scheduler`](Piwik/Scheduler)
- [`Piwik\Scheduler\Schedule`](Piwik/Scheduler/Schedule)
- [`Piwik\Segment`](Piwik/Segment)
- [`Piwik\Settings`](Piwik/Settings)
- [`Piwik\Settings\FieldConfig`](Piwik/Settings/FieldConfig)
- [`Piwik\Settings\Plugin`](Piwik/Settings/Plugin)
- [`Piwik\Translation`](Piwik/Translation)
- [`Piwik\Updater`](Piwik/Updater)
- [`Piwik\Updater\Migration`](Piwik/Updater/Migration)
- [`Piwik\Updater\Migration\Config`](Piwik/Updater/Migration/Config)
- [`Piwik\Updater\Migration\Db`](Piwik/Updater/Migration/Db)
- [`Piwik\Updater\Migration\Plugin`](Piwik/Updater/Migration/Plugin)
- [`Piwik\View`](Piwik/View)
- [`Piwik\ViewDataTable`](Piwik/ViewDataTable)
- [`Piwik\Widget`](Piwik/Widget)
